# tumor-ca

./: .gitignore  Automaton.cpp  Automaton.h  CMakeLists.txt  LICENSE  Parameters.cpp  Parameters.h  README.md  aliveCellCount.py  benchmark.cpp  main.cpp  protocols_statistics.ipynb  prots.csv  run-once.cpp  run-verification.sh  run.sl  simple-run.cpp  summarize.py  timelapse.cpp  util.h  verification.cpp
automaton/: Automaton.cpp  Cycles.cpp  IrradiationProtocol.cpp  Parameters.cpp  RandomEngine.cpp  State.cpp
ca/: State.cpp
include/: Automaton.h  Cycles.h  IrradiationProtocol.h  Parameters.h  RandomEngine.h  State.h  util.h
misc/: aliveCellCount.py  protocols_statistics.ipynb
models/: cnn_regressor.py  data_processor.py  data_processor.sh  dnn_regressor.sh  dnn_regressor_tf_2.0.py  evaluate_results.ipynb  hparams.py  lstm_classifier.py  lstm_regressor.py  requirements.txt
protocol_generator/: protocol_generator.cpp  protocol_list.csv  protocol_list_1.csv  protocol_list_10.csv  protocol_list_11.csv  protocol_list_12.csv  protocol_list_13.csv  protocol_list_14.csv  protocol_list_15.csv  protocol_list_16.csv  protocol_list_17.csv  protocol_list_18.csv  protocol_list_19.csv  protocol_list_2.csv  protocol_list_20.csv  protocol_list_21.csv  protocol_list_22.csv  protocol_list_23.csv  protocol_list_24.csv  protocol_list_25.csv  protocol_list_26.csv  protocol_list_27.csv  protocol_list_28.csv  protocol_list_29.csv  protocol_list_3.csv  protocol_list_30.csv  protocol_list_31.csv  protocol_list_32.csv  protocol_list_4.csv  protocol_list_5.csv  protocol_list_6.csv  protocol_list_7.csv  protocol_list_8.csv  protocol_list_9.csv  protocol_times.csv  protocol_times_1.csv  protocol_times_10.csv  protocol_times_11.csv  protocol_times_12.csv  protocol_times_13.csv  (+28 more)
protocol_generator/data/: protocol_times_17.csv  protocol_times_6.csv
resources/protocols/data/: protocol_times_14.csv  protocol_times_15.csv  protocol_times_22.csv  protocol_times_29.csv  protocol_times_3.csv  protocol_times_31.csv  protocol_times_5.csv  protocol_times_8.csv
resources/protocols/example/: 6.csv
src/: protocol_generator.cpp  simple-run.cpp
src/automaton/: Automaton.cpp  Automaton.h  IrradiationProtocol.cpp  IrradiationProtocol.h  Parameters.cpp  RandomEngine.h  State.cpp  catch.h
src/tests/: CellDivisionTests.cpp  IntegrationTest.cpp  IrradiateTumorTests.cpp  MatlabRandomEngineTests.cpp  ReplenishSubstrateTests.cpp  StateHelper.cpp  StateHelper.h  tests_main.cpp
tests/: AccumulationTests.cpp  CellDivisionTests.cpp  DiffusionTests.cpp  IntegrationTest.cpp  IrradiateTumorTests.cc  IrradiateTumorTests.cpp  IrradiationProtocolLoadFromFileTests.cpp  MatlabRandomEngineTests.cpp  MetaboliseNutrientsTests.cpp  OneStepTests.cpp  ReplenishSubstrateTests.cpp  SetGlobalStatesTests.cpp  SetLocalStatesTests.cpp  StateHelper.cpp  StateHelper.h  integration-test.cpp
tests/misc/: run_with_saving.m  save_workspace.m
tests/resources/: README.txt
tests/resources/matlab_results/: out-vnw-tr1-st0-0a-initial.json  out-vnw-tr1-st0-0b-ReplenishSubstrate.json
tests/resources/matlab_results/1/: out-vnw-tr1-st1-1-Diffusion.json  out-vnw-tr1-st1-2-IrradiateTumor.json  out-vnw-tr1-st1-3-SetLocalStates.json  out-vnw-tr1-st1-4-MetaboliseNutrients.json  out-vnw-tr1-st1-5-SetGlobalStates.json  out-vnw-tr1-st1-6-RepairCells.json  out-vnw-tr1-st1-7-CellDivision.json  out-vnw-tr1-st1-8-RunStats.json  out-vnw-tr1-st1-9-FinishCheck.json
tests/resources/matlab_results/10/: out-vnw-tr1-st10-1-Diffusion.json  out-vnw-tr1-st10-2-IrradiateTumor.json  out-vnw-tr1-st10-3-SetLocalStates.json  out-vnw-tr1-st10-4-MetaboliseNutrients.json  (+5 more)
tests/resources/misc/: run_with_saving.m  save_workspace.m
tests/resources/test_protocols/: protocols_500  protocols_simple  protocols_single
tumor-lib/: tumor-1.json  tumor-10.json  tumor-2.json  tumor-3.json  tumor-4.json  tumor-5.json  tumor-6.json  tumor-7.json  tumor-8.json  tumor-9.json
(+35426 files in other folders)
